# xeno-rt

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  CHANGELOG.md  CLA.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  RELEASE.md  SECURITY.md  agents.md  claude-to-codex.md  clippy.toml  deny.toml  inference-runtime.txt
.cargo/: config.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/workflows/: audit.yml  ci.yml  cla.yml  release.yml  stale.yml
benches/: bandwidth_bench.rs  inference_bench.rs  matvec_bench.rs  tokenizer_bench.rs
crates/xrt-cli/: Cargo.toml
crates/xrt-cli/src/: main.rs
crates/xrt-core/: Cargo.toml
crates/xrt-core/src/: lib.rs
crates/xrt-cuda/: Cargo.toml
crates/xrt-cuda/src/: lib.rs
crates/xrt-gguf/: Cargo.toml
crates/xrt-gguf/src/: huge_pages.rs  lib.rs
crates/xrt-hub/: Cargo.toml
crates/xrt-hub/src/: lib.rs
crates/xrt-kernels/: Cargo.toml
crates/xrt-kernels/src/: lib.rs
crates/xrt-kernels/src/cpu/: matmul.rs  mod.rs  quantize.rs  rmsnorm.rs  rope.rs  silu.rs  simd.rs  softmax.rs  thread_pool.rs
crates/xrt-models/: Cargo.toml
crates/xrt-models/src/: lib.rs  llama.rs
crates/xrt-runtime/: Cargo.toml
crates/xrt-runtime/src/: kv_cache.rs  lib.rs  sampler.rs  session.rs
crates/xrt-server/: Cargo.toml
crates/xrt-server/src/: main.rs
crates/xrt-tokenizer/: Cargo.toml
crates/xrt-tokenizer/src/: lib.rs
signatures/: cla.json
src/: lib.rs
tests/: gguf_parse_test.rs  kernels_test.rs  kv_cache_test.rs  sampler_test.rs  smoke_e2e.rs  tokenizer_test.rs
tests/common/: mod.rs  tokenizer_fixture.rs
xtask/: Cargo.toml
xtask/src/: main.rs
