[package]
name = "xrt-models"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
cuda = ["xrt-cuda/cuda"]

[dependencies]
parking_lot.workspace = true
tracing.workspace = true
xrt-core = { path = "../xrt-core" }
xrt-cuda = { path = "../xrt-cuda" }
xrt-gguf = { path = "../xrt-gguf" }
xrt-kernels = { path = "../xrt-kernels" }
