[package]
name = "xrt-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
default = []
cuda = ["xrt-runtime/cuda"]

[dependencies]
axum.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
xrt-hub = { path = "../xrt-hub" }
xrt-runtime = { path = "../xrt-runtime" }
xrt-tokenizer = { path = "../xrt-tokenizer" }
